adding blog skeleton

--- a/_layouts/old_wordpress.html
+++ b/_layouts/old_wordpress.html
@@ -88,7 +88,7 @@ img.emoji {
 
 						<div class="grve-container">
 										<h1 class="grve-logo ">
-				<a class="grve-dark" href="http://codeforneworleans.org/"><img src="/img/old_wordpress/CFNOLogo1024px.png" alt="Code For New Orleans" title="Code For New Orleans" data-at2x="/img/old_wordpress/CFNOLogo1024px.png" style="height:228px;" height="218" width="512"></a>
+				<a class="grve-dark" href="http://codeforneworleans.org/"><img src="/img/CFNOLogo1024px.png" alt="Code For New Orleans" title="Code For New Orleans" data-at2x="/img/CFNOLogo1024px.png" style="height:228px;" height="218" width="512"></a>
 
 					<span>Code For New Orleans</span>
 			</h1>
