Add an announcement highlight at the top of the project page, and ability to add additional content below the project data.

--- a/_layouts/code_for_new_orleans_project.html
+++ b/_layouts/code_for_new_orleans_project.html
@@ -1,6 +1,10 @@
 ---
   layout: code_for_new_orleans
 ---
+{% if page.project.announce %}
+<div class="project-announcement">{{ page.project.announce | markdownify }}</div>
+{% endif %}
+
 <h2 id="why">Why?</h2>
 
 {{ page.project.why | markdownify }}
@@ -40,3 +44,4 @@
 
 {{ page.project.where | markdownify }}
 
+{{ content }}
