Markdownify content in main layout.

--- a/_layouts/code_for_new_orleans.html
+++ b/_layouts/code_for_new_orleans.html
@@ -10,7 +10,7 @@
   <body>
     {% include header.html %}
     <div class='content'>
-      {{ content }}
+      {{ content | markdownify }}
     </div>
   </body>
 </html>
