--- a/_layouts/code_for_new_orleans.html
+++ b/_layouts/code_for_new_orleans.html
@@ -8,12 +8,9 @@
     <link href="/css/main.css" rel="stylesheet">
   </head>
   <body>
-    <header>
-      <div class="logo"></div>
-      <h1>{{ page.title | default: site.title }}</h1>
-    </header>
+    {% include header.html %}
     <div class='content'>
-      {{ content }}
+      {{ content | markdownify }}
     </div>
   </body>
 </html>
