--- a/css/main.css
+++ b/css/main.css
@@ -51,6 +51,7 @@ body {
   font-family: var(--sans);
   font-size: 20px;
   margin: 0;
+  z-index: 0;
 }
 header {
   background-color: white;
@@ -64,10 +65,10 @@ header {
   flex-direction: row;
   flex-flow: nowrap;
   align-items: center;
-
+  align-content: space-between;
 }
 .logo {
-  background-image: url('/img/cfno-logo.png');
+  background-image: url('/img/logo/cfno-logo.png');
   background-size: cover;
   min-width: 200px;
   min-height: 85px;
@@ -118,21 +119,45 @@ h6 {
 }
 .content {
   background-color: white;
-  z-index: 0;
+  z-index: -1;
   max-width: 900px;
   min-height: calc(100vh - 10px);
   margin: 0 auto;
   padding: 135px 30px 5px 30px;
 }
+img {
+  max-width: 900px;
+}
+.under {
+  z-index: 0;
+}
+.over {
+  z-index: 2;
+}
+.center {
+  text-align: center;
+}
 
+nav {
+  flex-direction: row;
+  align-self: center;
+}
+header > nav {
+  right: 10px;
+  position: absolute;
+}
 nav > ul {
-  display: block;
+  display: flex;
+  align-items: flex-end;
+  flex-direction: row;
 }
 nav > ul > li {
   display: inline-block;
   padding: 5px;
+  margin: 10px;
   background-color: var(--brand-sky-highlight);
   list-style-type: none;
+  border-radius: 5px;
 }
 nav > ul > li > a {
   color: var(--brand-blue);
@@ -151,7 +176,7 @@ nav > ul > li > a:active {
 .display-example, .person {
   display: flex;
   flex-direction: row;
-  align-items: center;
+  align-items: flex-start;
   justify-content: space-between;
   border-top: 1px solid var(--brand-gold);
   padding: 10px 0;
@@ -176,9 +201,11 @@ nav > ul > li > a:active {
   padding-left: 0;
 }
 .person-photo img {
-  width: 150px;
-  height: 150px;
-  border-radius: 50%;
+  width: 200px;
+  height: 200px;
+  border: 0;
+  box-shadow: 2px 3px rgba(200, 200, 200, 0.6);
+  transform: rotate(-10deg);
 }
 .display-example-wide,
 .person-details {
@@ -212,6 +239,16 @@ nav > ul > li > a:active {
   font-family: var(--sans);
   font-size: 28px;
   padding: 20px 20px;
+}
+.project-announcement {
+  background-color: var(--brand-sky-highlight);
+  color: var(--brand-blue);
+  font-family: var(--mono);
+  font-size: 24px;
+  padding: 20px 20px;
+  margin-top: 20px;
+  text-align: center;
+  border-radius: 20px;
 }
 .person {
   display: flex;
