Add social icons and join us page.

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,5 +1,7 @@
   <header>
-    <a href="/"><div class="logo"></div></a>
+    <a class="logo-link" href="/">
+      <div class="logo"></div>
+    </a>
     <h1>{{ page.title | default: site.title }}</h1>
     <nav role="navigation">
       <ul>
